# MQSim_CXL

./: CLAUDE.md  DEVELOPER_GUIDE_KR.md  Makefile  TRAFFIC_GEN_ANALYSIS.md
cxl_traffic_gen/: CMakeLists.txt  EXTRACTION_GUIDE.md  README.md
cxl_traffic_gen/examples/: README.md  gem5_integration_example.cpp  standalone_example.cpp
cxl_traffic_gen/include/: cxl_flit.h  cxl_traffic_gen.h
cxl_traffic_gen/tests/: .gitignore  CMakeLists.txt  Makefile  README.md  cxl_flit_generator.cpp  cxl_flit_samples.txt  dump_all_flit_types.sh  test_cxl_traffic_patterns.cpp
docs/kr/: 01-architecture-overview.md  02-cxl-implementation.md  03-simulation-flow.md  04-gem5-integration.md
src/cxl/: CFLRU.cpp  CFLRU.h  CXL_Config.cpp  CXL_Config.h  Prefetching_Alg.cpp  Prefetching_Alg.h  lrfu_heap.cpp  lrfu_heap.h
src/ssd/: Address_Mapping_Unit_Page_Level.cpp  GC_and_WL_Unit_Page_Level.cpp
